Linking external google fonts and adjusting media queries to fix the wrapping of medium sized screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ body {
     background-attachment: fixed;
     background-color: #070b22;
 }
+h1, h2 { font-family:"Coiny", 'Segoe UI', Geneva, Verdana, sans-serif; }
 
 /* Header Styling */
 nav {
@@ -48,7 +49,7 @@ nav {
 }
 
 nav h1 {
-    font-size: 1.5em;
+    font-size: 1.9em;
 }
 
 #preview {
@@ -93,16 +94,13 @@ nav ul li {
 }
 
 /* Hero Unit*/
-.hero {
-    margin: 2% 15%;
-}
+.hero { margin: 2% 15%; }
 
 .hero h1 {
     color: #df9b07;
     font-size: 5em;
-    font-weight: bold;
+    /* font-weight: bold; */
     text-align: center;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     justify-content: center;
 }
 
@@ -190,8 +188,8 @@ main img{
 }
 
 main h2 {
-    font-size: 2.4em;
-    font-weight: bold;
+    font-size: 2.8em;
+    /* font-weight: bold; */
     margin-bottom: 15px;
 }
 
@@ -220,14 +218,8 @@ main .button:hover {
 .description {
     padding-left: 3em;
     padding-right: 3em;
-    font-size: 1.1em;
+    font-size: 1.2em;
 }
-
-/* #saturn-img {
-    transform: rotate(-20deg);
-    width: auto;
-    height: 300px; 
-} */
 
 
 /* Footer */
@@ -261,45 +253,35 @@ main .button:hover {
         padding-left: 1em;
         padding-right: 1em;
     }
+    .planets {
+        margin-left: 2em;
+        margin-right: 2em;
+    }
 }
 
-/* @media screen and (max-width: 640px) {
+@media screen and (max-width: 740px) {
     nav { 
-        justify-content: center; 
+        justify-content: space-between; 
         margin-left: 1em;
         margin-right: 1em;
+        flex-direction: column;
     }
     nav ul li { margin-top: 15px; }
     main img{ max-width: 300px; }
-    .planets {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        margin-left: 2em;
-        margin-right: 2em;
-    }
-    .planets:nth-child(even) { flex-direction: column-reverse; }
-} */
+    .footer-item { margin-bottom: 10px; }
+}
 
 @media screen and (max-width: 640px) {
-
-    nav { 
-        justify-content: center; 
-        margin-left: 1em;
-        margin-right: 1em;
-    }
-    nav ul li { margin-top: 15px; }
-    main img{ max-width: 300px; }
     .planets {
         display: flex;
         flex-direction: column;
         text-align: center;
-        margin-left: 2em;
-        margin-right: 2em;
     }
     .planets:nth-child(even) { flex-direction: column-reverse; }
 
-
+    .description {
+        font-size: 1.2em;
+    }
 
     .hero h1 { font-size: 3.5em; }
     /* nav.top { justify-content: center; } */
@@ -308,7 +290,4 @@ main .button:hover {
         justify-content: center;
     }
     .info { width: 100%; }
-    .footer-item {
-        margin-bottom: 10px;
-    }
 }
